--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -5,8 +5,7 @@
   "author": "Ian He",
   "license": "Apache-2.0",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "rm -rf dist && tsc -b",
+    "build": " tsc -b",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nodemon",
