--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -7,6 +7,7 @@
     "build": "tsc -b",
     "prepack": "rm -rf dist && npm build",
     "test": "jest",
+    "run": "../node/bin/run -c config.yml",
     "codegen": "./node_modules/.bin/subql codegen"
   },
   "files": [
