--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.21",
     "@patract/dev": "^0.5.21",
     "antd": "^4.16.8",
     "axios": "^0.21.1",
+    "graphql": "^15.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
