--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@patract/dev": "^0.5.21",
+    "@polkadot/types": "^5.2.1",
+    "@polkadot/types-known": "^5.2.1",
     "antd": "^4.16.8",
     "axios": "^0.21.1",
+    "cids": "^1.1.7",
     "graphql": "^15.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
