--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "cids": "^1.1.7",
     "graphql": "^15.5.1",
+    "lottie-web": "^5.7.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
