--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -17,6 +17,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-markdown": "^6.0.2",
     "react-router-dom": "^5.2.0",
+    "rxjs": "^7.3.0",
     "styled-components": "^5.2.2"
   },
   "devDependencies": {
